--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,5 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block contents %}
-
-<h1>Hi {{ user.username}}</h1>
-{% for post in posts %}
-<div>
-    <p>
-        {{ post.author.username }} says: <b>{{ post.blog }}</b>
-    </p>
-</div>
-{% endfor %}
 {% endblock %}
 
 
