--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,40 +1,23 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block contents %}
-    <h1>Sign In</h1>
-    <form action="/login", method="POST">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label}}
-            <br>
-            {{ form.username(size=32) }}
-            <br>
-            {% for error in form.username.errors %}
-                    <span style="color: red">
-                        {{ error }}
-                    </span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label}}
-            <br>
-            {{ form.password(size=32) }}
-            <br>
-            {% for error in form.password.errors %}
-                    <span style="color: red">
-                        {{ error }}
-                    </span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.remember_me }} {{ form.remember_me.label }}
-        </p>
-        <p>
-            {{ form.submit() }}
-        </p>
-    </form>
+<h1>Sign In</h1>
+<form action="{{ url_for('login') }}" method="POST">
+{{ form.hidden_tag() }}
+<p>
+    {{ form.username.label}} <br>
+    {{ form.username(size = 32) }}
+</p>
+<p>
+    {{ form.password.label}} <br>
+    {{ form.password(size = 32) }}
+</p>
+<p>
+    {{ form.remember_me() }} {{ form.remember_me.label}}
+</p>
+<p>
+    {{ form.submit()}}
+</p>
 
-
+</form>
 {% endblock %}
-
-
