--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
     {% if title %}
-           <title>{{title}} - Microblog</title> 
+    <title>{{title}} - Microblog</title>
     {% else %}
-            <title>Welcome to the Microblog</title> 
+    <title>Welcome to the Microblog</title>
     {% endif %}
 </head>
+
 <body>
     <div>
         Microblog:
         <a href="{{ url_for('index') }}">Home</a>
+        {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}">Login</a>
-    </div>
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-                    {{ message }}
-            {% endfor %}    
+        {% else%}
+        <a href="{{ url_for('user', username=current_user.username)}}">Profile</a>
+        <a href="{{url_for('logout')}}">Logout</a>
         {% endif %}
-    {% endwith %}
-    {% block contents %}{% endblock %}
+    </div>
+
+    {% with messages = get_flashed_messages() %} 
+    {% if messages %} 
+        {% for message in messages %} 
+            {{ message }} 
+        {% endfor %} 
+    {% endif %} 
+    {% endwith %} 
+    
+    {% block contents %}
+    {% endblock %}
 </body>
+
 </html>
